# DobotAPI

./: .gitignore  404.html  DobotMessage.py  LICENSE  Pipfile  README.md  belt_example.py  coords.txt  dobot.py  draw_example.py  example.py  getting-started.html  hashmap.json  hella_example1.py  hella_example2.py  index.html  installation.html  midi.py  package.json  ports.html  posReader.py  pyproject.toml  shell-usage.html  shell.py  troubleshooting.html
addons/: conveyor-belt.html  effectors.html  engraver.html
assets/: addons_conveyor-belt.md.09220560.js  addons_conveyor-belt.md.09220560.lean.js  addons_conveyor-belt.md.53d996d7.js  addons_conveyor-belt.md.53d996d7.lean.js  addons_conveyor-belt.md.60e4b5b2.js  addons_conveyor-belt.md.614df158.lean.js  addons_conveyor-belt.md.73a7d019.js  addons_conveyor-belt.md.7eb72a1f.js  addons_conveyor-belt.md.92ccea0e.js  addons_conveyor-belt.md.92ccea0e.lean.js  addons_conveyor-belt.md.a13ede8a.lean.js  addons_conveyor-belt.md.baf575e7.js  addons_conveyor-belt.md.baf575e7.lean.js  addons_conveyor-belt.md.bee347ad.js  addons_conveyor-belt.md.bee347ad.lean.js  addons_conveyor-belt.md.c9acab64.js  addons_conveyor-belt.md.c9acab64.lean.js  addons_conveyor-belt.md.cd06f751.lean.js  addons_effectors.md.0b56aef5.js  addons_effectors.md.0b56aef5.lean.js  addons_effectors.md.0d9c913b.js  addons_effectors.md.0d9c913b.lean.js  addons_effectors.md.15c29908.js  addons_effectors.md.15c29908.lean.js  addons_effectors.md.1e749d37.js  addons_effectors.md.1e749d37.lean.js  addons_effectors.md.28576378.js  addons_effectors.md.28576378.lean.js  addons_effectors.md.30ce96e6.js  addons_effectors.md.30ce96e6.lean.js  addons_effectors.md.67299cb5.js  addons_effectors.md.67299cb5.lean.js  addons_effectors.md.677b0852.js  addons_effectors.md.677b0852.lean.js  addons_effectors.md.9e9b720e.js  addons_effectors.md.9e9b720e.lean.js  addons_effectors.md.d02e1513.js  addons_effectors.md.d02e1513.lean.js  addons_effectors.md.ed1150c2.js  addons_effectors.md.ed1150c2.lean.js  (+139 more)
core/: dobot.py  dobot_interfaces.py  exception_interfaces.py  utils.py
(+39 files in other folders)
