[tool.poetry]
name = "dobotapi"
version = "0.1.0"
description = ""
authors = ["Stax124, JustABenda"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
prompt-toolkit = "^3.0.29"
pyserial = "^3.5"
pdoc = "^12.0.0"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
autopep8 = "^1.6.0"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
